# mssilk

./: .gitignore  Android.mk  CMakeLists.txt  Makefile.am  README  configure.ac  mssilk.iss.in  silk.c  silk_dec.c  silk_enc.c
downloads/: Makefile.am
sdk/: Makefile.am
sdk/SILK_SDK_SRC_v1.0.9/SILK_SDK_SRC_ARM_v1.0.9/: Makefile
sdk/SILK_SDK_SRC_v1.0.9/SILK_SDK_SRC_FLP_v1.0.9/: Makefile
sdk/SILK_SDK_SRC_v1.0.9/SILK_SDK_SRC_MIPS_v1.0.9/: Makefile
sdk/known_checksums/: SILK_SDK_SRC_v1.0.9.zip.md5
